2024-08-12  Araki Ken  <arakiken@users.sf.net>

	* ui_im_status_screen-cocoa.m: Fix errors in -Werror=incompatible-pointer-types.

	* cocoa.m, cocoatouch.m: Fix errors in -Werror=incompatible-pointer-types.

	* im_canna.c, quartz/ui_imagelib.c: Fix errors in -Werror=incompatible-pointer-types.

	* im_wnn.c, quartz/ui_font.c: Fix errors in -Werror=incompatible-pointer-types.

	* ci.yml: Add -Wno-incompatible-pointer-types-discards-qualifiers option
	  in MacOS.

	* wnnlib.c: Fix errors in -Werror=incompatible-pointer-types.

2024-08-11  Araki Ken  <arakiken@users.sf.net>

	* Fix errors in -Werror=incompatible-pointer-types.

2024-08-05  Araki Ken  <arakiken@users.sf.net>

	* Support -Werror=incompatible-pointer-types option of gcc.

2024-07-27  Araki Ken  <arakiken@users.sf.net>

	* README, doc/ja/README.ja: Updated.

	* uitoolkit/ui_copymode.c: Replace the first character of input text
	  by '/' or '?' in starting the copy mode every time.

	* configure.in: Check libpng if gdk-pixbuf is not found.

	* tool/mlimgloader/libpng.c, stb_image_resize2.h: Added.

2024-05-07  Araki Ken  <arakiken@users.sf.net>

	* xlib/ui_imagelib.c: Remove 'disp->depth < 8' in load_sixel().

2024-05-06  Araki Ken  <arakiken@users.sf.net>

	* xlib/ui_imagelib.c: load_sixel() supports less than 8 depth.
	  (https://github.com/arakiken/mlterm/issues/93)

2024-05-05  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  - Add vte_terminal_{get|set}_font_options(),
	    vte_terminal_get_text_selected{_full}(), vte_terminal_get_text_range_format()
	    and vte_terminal_check_{match|hyperlink|regex_array|regex_simple}_at().
	  - vte_terminal_paste_clipboard() pastes text from clipboard instead of
	    primary selection.
	  - Emit "selection-changed" signal in vte-0.18.x or before.

	* vtetypebuiltins.c: Support vte 0.16.14 or before.

2024-05-03  Araki Ken  <arakiken@users.sf.net>

	* libind/Makefile.in: Remove %.
	  (https://github.com/arakiken/mlterm/issues/88)
